# gridanimation

./: CMakeLists.txt
src/: main.cpp
